--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,12 +10,21 @@
                 <li><a href="mailto:info@wecartgh.com"><i class="fa fa-envelope-o"></i> info@wecartgh.com</a></li>
             </ul>
             <ul class="header-links pull-right">
+                {% if user.id is None %}
                 <li>
                     <i class="fa fa-user-o"></i><small class="title text-muted">Welcome
                         Guest!</small><br>
-                    <a href="#">Sign in</a> <span class="dark-transp"> | </span>
-                    <a href="#"> Register</a>
+                    <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
+                    <a href="{% url 'register' %}"> Register</a>
                 </li>
+                {% else %}
+                <li>
+                    <i class="fa fa-user-o"></i><small class="title text-muted">Welcome,
+                        {{ user.first_name }}!</small><br>
+                    <a href="{% url 'dashboard'%}">Dashboard</a> <span class="dark-transp"> | </span>
+                    <a href="{% url 'logout' %}"> Logout</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -30,7 +39,7 @@
                 <!-- LOGO -->
                 <div class="col-md-2">
                     <div class="header-logo">
-                        <a href="{% url 'home'%}" class="logo">
+                        <a href="{% url 'home' %}" class="logo">
                             <img src="{% static 'images/logo-1.png' %}" alt="wecartgh logo" class="img-responsive">
                         </a>
                     </div>
@@ -41,7 +50,7 @@
                 <div class="col-md-8">
                     <div class="header-search">
                         <div class="dropdown">
-                            <form action="#" class="search">
+                            <form action="{% url 'search' %}" class="search">
 
                                 <button class="input-select" type="button" id="dropdownMenu1" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="true">
@@ -49,11 +58,12 @@
                                     <span class="caret"></span>
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                    <li><a class="dropdown-item" href="{%url 'store' %}">
+                                    <li><a class="dropdown-item" href="{% url 'store' %}">
                                             All Products</a>
                                     </li>
                                     {% for category in links %}
-                                    <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a></li>
+                                    <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name
+                                            }}</a></li>
                                     {% endfor %}
                                 </div>
                                 <!-- <select class="input-select">
@@ -85,10 +95,10 @@
 
                         <!-- Cart -->
                         <div>
-                            <a href="#">
+                            <a href="{% url 'cart' %}">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>Your Cart</span>
-                                <div class="qty">1</div>
+                                <div class="qty">{{ cart_count }}</div>
                             </a>
                             <!-- <div class="cart-dropdown">
                                 <div class="cart-list">
@@ -110,7 +120,7 @@
                                     <h5>SUBTOTAL: GH₵2940.00</h5>
                                 </div>
                                 <div class="cart-btns">
-                                    <a href="#">View Cart</a>
+                                    <a href="{% url 'cart' %}">View Cart</a>
                                     <a href="#">Checkout <i class="fa fa-arrow-circle-right"></i></a>
                                 </div>
                             </div> -->
@@ -144,8 +154,8 @@
         <div id="responsive-nav">
             <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
-                <li class="active"><a href="{% url 'home'%}">Home</a></li>
-                <li><a href="{%url 'store' %}">All Products</a></li>
+                <li class="active"><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'store' %}">All Products</a></li>
                 {% for category in links %}
                 <li><a href="{{ category.get_url }}">{{ category.category_name }}</a></li>
                 {% endfor %}
@@ -157,12 +167,12 @@
     <!-- /container -->
 
     <!-- jQuery Plugins -->
-    <!-- <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/slick.min.js' %}"></script>
     <script src="{% static 'js/nouislider.min.js' %}"></script>
     <script src="{% static 'js/jquery.zoom.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script> -->
+    <script src="{% static 'js/main.js' %}"></script>
 
 </nav>
 <!-- /NAVIGATION -->
