--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -12,7 +12,7 @@
             <div class="col-md-7">
                 <div id="product-main-img">
                     <div class="product-preview">
-                        <img src="{{ single_product.images.url }}" alt="{{ single_product.product_name }}">
+                        <img src="{{ single_product.images.url }}" alt="">
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <!-- /Product thumb imgs -->
 
             <!-- Product details -->
-            <form action="#" method="POST">
+            <form action="{% url 'add_cart' single_product.id %}" method="POST">
                 {% csrf_token %}
                 <div class="col-md-5">
                     <div class="product-details">
