Fourth Commit - Product Order and Payment

--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
 
-                <a href="#" class="primary-btn order-submit">Checkout <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="{% url 'checkout' %}" class="primary-btn order-submit">Checkout <i class="fa fa-arrow-circle-right"></i></a>
                 <a href="{% url 'store' %}" class="newsletter-btn order-submit text-center">Continue Shopping</a>
             </div>
             <!-- /Order Total End Here-->
