--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
     <script src="{% static 'js/jquery.zoom.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
+    <!-- PayPal Script -->
+    <script src="https://www.paypal.com/sdk/js?client-id=ASVQYxycoy55zvTKue4mxuxSHWRhf1GAWsSUT11My3Sry4feJ7nYOceCgWUF8nW6mK_pmRY52cVZX3mY&currency=USD"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
