--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -2,11 +2,10 @@
 {% load static %}
 
 
-
 {% block content %}
 
 <div class="container" style="margin-top: 50px;">
-    <center><i class="fa fa-arrow-circle-right" aria-hidden="true" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
+    <center><i class="fa fa-check" aria-hidden="true" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
     <h2 class="text-center">Payment Successful</h2>
 
     <br>
@@ -39,6 +38,7 @@
                                     <li>{{ order.full_name}}</li>
                                     <li>{{ order.full_address}}</li>
                                     <li>{{ order.city }}, {{ order.region}}</li>
+                                    <li>{{ order.country }}</li>
                                 </ul>
                             </div>
                         </div>
@@ -73,30 +73,29 @@
                                                     <p class="text-muted small">
                                                         {% if item.variations.all %}
                                                         {% for i in item.variations.all %}
-                                                        {{ i.variation_category | capfirst }}: {{ i.variation_value |
-                                                        capfirst }} <br>
+                                                        {{ i.variation_category | capfirst }}: {{ i.variation_value | capfirst }} <br>
                                                         {% endfor %}
                                                         {% endif %}
                                                     </p>
                                                 </td>
                                                 <td class="text-center">{{ item.quantity }}</td>
-                                                <td class="text-center">GH₵{{ item.product_price }}</td>
+                                                <td class="text-center">GH₵{{ item.product_price }}0</td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
                                         <tfoot>
                                             <tr>
                                                 <th colspan="2" class="text-right">Sub Total:</th>
-                                                <th class="text-center">GH₵{{ subtotal }}</th>
+                                                <th class="text-center">GH₵{{ subtotal }}0</th>
                                             </tr>
                                             <tr>
                                                 <th colspan="2" class="text-right">Delivery Charge:</th>
-                                                <th class="text-center">GH₵{{ order.delivery_charge }}.0</th>
+                                                <th class="text-center">GH₵{{ order.delivery_charge }}0</th>
                                             </tr>
 
                                             <tr>
                                                 <th colspan="2" class="text-right">Grand Total:</th>
-                                                <th class="text-center">GH₵{{ order.order_total }}</th>
+                                                <th class="text-center">GH₵{{ order.order_total }}0</th>
                                             </tr>
                                         </tfoot>
                                     </table>
