--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -11,11 +11,24 @@
             <!-- Product main img -->
             <div class="col-md-7">
                 <div id="product-main-img">
-                    <div class="product-preview">
-                        <img src="{{ single_product.images.url }}" alt="">
+                    <div class="product-preview mainImage">
+                        <img src="{{ single_product.images.url }}" alt="Product Image">
                     </div>
                 </div>
+            <ul class="thumb">
+                <li>
+                    <a href="{{ single_product.images.url }}" target="mainImage">
+                        <img src="{{ single_product.images.url }}" alt="Product Image">
+                    </a>
+                    {% for i in product_gallery %}
+                    <a href="{{i.image.url}}" target="mainImage">
+                        <img src="{{i.image.url}}" alt="Product Image">
+                    </a>
+                    {% endfor %}
+                </li>
+            </ul>    
             </div>
+            
             <!-- /Product main img -->
 
             <!-- Product thumb imgs -->
