--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -14,21 +14,7 @@
             <aside class="col-3">
                 <!-- Billing Details -->
                 <div class="billing-details">
-                    <aside class="col-md-3">
-                        <!--   SIDEBAR   -->
-                        <ul class="list-group">
-                            <a class="list-group-item active" href="#"> My order history </a>
-                            <a class="list-group-item" href="#"> Transactions </a>
-                            <a class="list-group-item" href="#"> Return and refunds </a>
-                            <a class="list-group-item" href="#">Settings </a>
-                            <a class="list-group-item" href="#"> My Selling Items </a>
-                            <a class="list-group-item" href="#"> Received orders </a>
-                        </ul>
-                        <br>
-                        <a class="btn btn-light btn-block" href="{% url 'logout' %}"> <i class="fa fa-power-off"></i>
-                            <span class="text">Logout</span> </a>
-                        <!--   SIDEBAR .//END   -->
-                    </aside>
+                    {% include 'includes/dashboard_sidebar.html' %}
 
                 </div>
                 <!-- /Order Summary Details Ends Here -->
@@ -39,77 +25,36 @@
                 <div class="section-title text-justify order-col">
                     <div class="order-col">
                         <div>
-                            <strong>Order ID: </strong>6123456789
-                            <strong>Order Date: </strong>04/20/2025
+                            <strong>Logged in as: </strong>{{ user.full_name }}                       
                         </div>
                     </div>
                 </div>
                 <div class="order-summary">
                     <div class="row">
-                        <div class="col-md-8">
-                            <h6 class="text-muted">Delivery to:</h6>
-                            <p>Lisa Johnson <br>
-                                Phone +233 54-247-4172 <br> Email: myname@pixsellz.com <br>
-                                Location: Home number, Building name, Street 123, Accra, GH <br>
-                                P.O. Box: 100123
-                            </p>
+                        <div class="col-md-6">
+                            <div class="order-details" style="text-align: center;">
+                                <div class="card-body">
+                                    <h5 class="card-title">Total Orders</h5>
+                                    <h4>{{ orders_count }}</h4>
+                                    <a href="{% url 'my_orders'%}">View Orders</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-4 text-right">
-                            <h6 class="text-muted">Payment</h6>
-                            <span class="text-success">
-                                <i class="fa fa-cc-visa"></i>
-                                Visa **** 4216
-                            </span>
-                            <p>Subtotal: GH₵ 356.00 <br>
-                                Shipping fee: GH₵ 56.00 <br>
-                                <span class="b">Total: GH₵ 456.00</span>
-                            </p>
+                        <div class="col-md-6">
+                            <div class="order-details" style="text-align: center;">
+                                <div class="card-body">
+                                     <img src="{{ userprofile.profile_picture.url }}" 
+                                     alt="User Profile" 
+                                     width="50" 
+                                     height="50" 
+                                     style="border-radius: 50%;">
+                                     <p style="margin-bottom: 0;">{{ user.email }}</p>
+                                    <p style="margin-bottom: 0;">{{ user.phone_number }}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <tr>
-                            <td width="65">
-                                <img src="../images/items/1.jpg" class="img-xs border">
-                            </td>
-                            <td>
-                                <p class="title mb-0">Product name goes here </p>
-                                <var class="price text-muted">GH₵ 145</var>
-                            </td>
-                            <td> Seller <br> Nike clothing </td>
-                            <td width="250"> <a href="#" class="newsletter-btn">Track order</a> <a href="#"
-                                    class="btn btn-light"> Details </a> </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="../images/items/2.jpg" class="img-xs border">
-                            </td>
-                            <td>
-                                <p class="title mb-0">Another name goes here </p>
-                                <var class="price text-muted">GH₵ 15</var>
-                            </td>
-                            <td> Seller <br> ABC shop </td>
-                            <td> <a href="#" class="newsletter-btn">Track order</a> <a href="#" class="btn btn-light">
-                                    Details
-                                </a> </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img src="../images/items/3.jpg" class="img-xs border">
-                            </td>
-                            <td>
-                                <p class="title mb-0">The name of the product goes here </p>
-                                <var class="price text-muted">GH₵ 145</var>
-                            </td>
-                            <td> Seller <br> Wallmart </td>
-                            <td> <a href="#" class="newsletter-btn">Track order</a> <a href="#" class="btn btn-light">
-                                    Details
-                                </a> </td>
-                        </tr>
-                    </table>
-                </div> <!-- table-responsive .end// -->
-                <!-- /Order Total End Here-->
+                </div>                
             </div>
             <!-- /row -->
         </div>
