7th commit - Requirements added

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -38,7 +38,7 @@
                                 <div class="form-group">
                                     {{ form.confirm_password }}
                                 </div>
-                                <button type="submit" class="primary-btn order-submit">Register</button>
+                                <center><button type="submit" class="primary-btn order-submit">Register</button></center>
                                 {{ form.email.errors }}
                                 {{ form.non_field_errors }}
                             </div>
