--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -62,8 +62,7 @@
                                             All Products</a>
                                     </li>
                                     {% for category in links %}
-                                    <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name
-                                            }}</a></li>
+                                    <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a></li>
                                     {% endfor %}
                                 </div>
                                 <!-- <select class="input-select">
