--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -105,8 +105,8 @@
 
                         <!-- Place Order button inside the form -->
                         <div class="text-center mt-4">
-                            <button type="submit" class="primary-btn order-submit">Place Order <i
-                                    class="fa fa-arrow-circle-right"></i></button>
+                            <center><button type="submit" class="primary-btn order-submit">Place Order <i
+                                    class="fa fa-arrow-circle-right"></i></button></center>
                             <a href="{% url 'store' %}" class="newsletter-btn order-submit text-center">Continue
                                 Shopping</a>
                         </div>
