--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -44,7 +44,7 @@
                                     <input class="form-control" type="password" placeholder="Enter Your Password"
                                         name="password" required>
                                 </div>
-                                <button type="submit" class="primary-btn order-submit">Login</button>
+                                <center><button type="submit" class="primary-btn order-submit">Login</button></center>
                                 {{ form.email.errors }}
                                 {{ form.non_field_errors }}
                             </div>
