--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -39,7 +39,7 @@
                 <!-- /aside Widget -->
 
                 <!-- aside Widget -->
-                <div class="aside">
+               <!--  <div class="aside">
                     <h3 class="aside-title">Price</h3>
                     <div class="price-filter">
                         <div id="price-slider"></div>
@@ -55,11 +55,11 @@
                             <span class="qty-down">-</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- /aside Widget -->
                 <!-- aside Widget -->
                 <!-- store top filter -->
-                <div class="aside">
+                <!-- <div class="aside">
                     <h3 class="aside-title">Size</h3>
                     <div class="store-sort">
                         <label>
@@ -78,7 +78,7 @@
                             </select>
                         </label>
                     </div>
-                </div>
+                </div> -->
                 <!-- /store top filter -->
                 <!-- /aside Widget -->
 
