--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -37,7 +37,7 @@
 
                 <div class="clearfix visible-xs"></div>
 
-                <div class="col-md-3 col-xs-6">
+                <!-- <div class="col-md-3 col-xs-6">
                     <div class="footer">
                         <h3 class="footer-title">Information</h3>
                         <ul class="footer-links">
@@ -48,7 +48,7 @@
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-md-3 col-xs-6">
                     <div class="footer">
